# yagolcpp

./: CMakeLists.txt
src/: bench.cc  gol.h  main.cc  types.h
